--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ crash.log
 # version control.
 #
 # example.tfvars
+*.tfvars
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
@@ -23,7 +24,14 @@ override.tf.json
 
 # Include override files you do wish to add to version control using negated pattern
 #
-# !example_override.tf
+!terraform.tfvars
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+# Idea
+.idea
+**/.DS_Store
+
+# Local Configuration
+.envrc
